@@ -2,6 +2,7 @@ Revision history for Net-Silverpeak-Orchestrator
 
 {{ $NEXT }}
     - add get_appliance_ipsla_configs
+    - add get_appliance_ipsla_states
 
 0.012000  2024-04-29 10:00:36+02:00 Europe/Vienna
     - add list_groups
